@@ -1,4 +1,4 @@
-.TH ZRAM-INIT "8" "June 2020" "zram-init" "System Administration"
+.TH ZRAM-INIT "8" "July 2020" "zram-init" "System Administration"
 .\" {{{ SEE ALSO
 .SH "NAME"
 \fBzram-init\fR \- Skripte zur Unterst\(:utzung komprimierter Swap-Devices oder Ramdisks mit zram
@@ -83,6 +83,11 @@ Mit \fIPRIO=\-\fR wird die voreingestellte Priorit\(:at (-1) beibehalten.
 .BR "\-t ext2" | ext4 | btrfs | xfs
 Legt Dateisystem-Typ fest, wenn \fIVERZEICHNIS\fR angegeben ist.
 Voreinstellung ist \fBext4\fR.
+.TP
+.BR "\-B " \fIBSIZE
+Wenn angegeben, wird die voreingestellte Blockl\(:ange ver\(:andert
+(ext2, ext4).
+Zul\(:assige Werte sind 1024, 2048, 4096.
 .TP
 .BR "\-i " \fIIRATIO
 Wenn angegeben, wird das Bytes/Inodes-Verh\(:altnis im Dateisystem \(:uberschrieben
